# Lekin_Python

./: .gitignore  MANIFEST.in  README.md  lekin-library_DECISIONS.md  pyproject.toml  requirements.txt
.venv-test/: pyvenv.cfg
Data/Ch17/: Ex2.job  Ex2.mch  Ex2.seq  Ex3.job  Ex3.mch  Ex3.seq  Fig2.job  Fig2.mch  Fig2.seq
Data/Experiments/: Jobs.job  Jobs_fcfs.job  Jobs_fcfs_parallel.job  Jobs_flexiblel.job  Jobs_parallel.job  Machines.mch  Machines_fcfs.mch  Machines_fcfs_parallel.mch  Machines_flexible.mch  Machines_parallel.mch  exported_test_complexfcfs.job  exported_test_complexfcfs.mch  parallel.json
Data/Exported/: Jobs.job  Machines.mch  exported_test.job  exported_test.mch
Data/Flexible Shops/: JS_setups.job  JS_setups.mch  JS_setups.seq  demo.job  demo.mch  ffs1.job  ffs1.mch  ffs1.seq  ffs2.job  ffs2.mch  ffs2.seq  ffs3.job  ffs3.mch  ffs3.seq  flexjob.job  flexjob.mch  flexjob.seq
Data/Flow Shop/: Car6.job  johnson.job  johnson.mch
Data/Job Shop/: MT06.job  MT10.mch  MT10.seq  jobshop03.job  jobshop03.mch  jobshop10  jobshop10.job  jobshop10.seq  jobshop18.job  jobshop18.mch  jobshop18.seq
Data/Parallel Machines/: parallel.job  parallel.mch  parallel.seq
Data/Single Machine/: Jobs.job  Machines.mch  Seqs.seq  exported_system.json  exported_test.job  exported_test.mch  output.seq  single.job  single.mch
Data2/Balas/: ABZ5.job  ABZ6.job  ABZ7.job  ABZ7.mch  ABZ8.job  ABZ9.job
Data2/Carlier/: Car1.job  Car2.job  Car3.job  Car3.mch  Car4.job  Car4.mch  Car5.job  Car5.mch  Car6.mch  Car7.job  Car7.mch  Car8.job  Car8.mch
Data2/Lawrence/: La01.job  La01.mch  La02.job  La02.mch  La03.job  La03.mch  La04.job  La04.mch  La05.job  La05.mch  La06.job  La06.mch  La07.job  La07.mch  La08.job  La08.mch  La09.job  La09.mch  La10.job  La10.mch  La11.job  La11.mch  La12.job  La12.mch  La13.job  La13.mch  La14.job  La14.mch  La15.job  La15.mch  La16.job  La16.mch  La17.job  La17.mch  La18.job  La18.mch  (+44 more)
docs/: API_REFERENCE.md
examples/: 01_first_schedule.py  02_multi_operation_job.py  03_compare_algorithms.py  README.md  complex_phase0_check.py  example_script.py  exportsystemexample.py  fcfs_example.py  fcfs_example_2.py  fcfs_parallel_machine.py  fcfs_single_machine.py  import json.py  jobextractionfile.py  trial.py  wspt_example.py
lekinpy/: __init__.py  exceptions.py  io.py  job.py  machine.py  schedule.py  system.py
lekinpy.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_algorithm_plugin_contract.py  test_multi_operation_scheduling.py  test_reporting_reads_real_data.py  test_schedule_model.py  test_validation.py
(+30 files in other folders)
