[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lekinpy"
version = "0.1.0"
description = "A Python library for job shop scheduling compatible with LEKIN and JSON formats."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
