[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "lekinpy"
version = "0.1.0"
description = "A Python library for job shop scheduling compatible with LEKIN and JSON formats."
authors = [
    { name = "Ruturaj Vasant", email = "rvt2018@nyu.edu" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["scheduling", "job shop", "lekin", "optimization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
    "matplotlib>=3.0.0"
]
urls = { "Homepage" = "https://github.com/Ruturaj-Vasant/Lekin_Python" }
 
[tool.setuptools.packages.find]
include = ["lekinpy*"]
exclude = ["Data*", "Data2*", "tests*"]
